cm-demo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mss-db-prod
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
